fix: shadow&forms z-index

--- a/style.scss
+++ b/style.scss
@@ -69,7 +69,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1;
+    z-index: 2;
 
     padding: 30px 69px;
 
@@ -212,6 +212,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1;
 
   width: 100vw;
   height: 100vh;
